--- a/modules/ROOT/partials/multi-location/event-bus.adoc
+++ b/modules/ROOT/partials/multi-location/event-bus.adoc
@@ -12,7 +12,7 @@ The Infinite Scale event bus can be configured by a set of environment variables
 
 * In case of an orchestrated installation like with Docker or Kubernetes, the event bus must be an external service for scalability like a `Redis Sentinel cluster` or a key-value-store https://docs.nats.io/nats-concepts/jetstream/key-value-store[NATS JetStream]. Both named stores are supported and also used in xref:deployment/services/caching.adoc[Caching and Persistence]. The store used is not part of the Infinite Scale installation and must be separately provided and configured.
 
-* Note that from a configuration point of view, caching respectively persistance is independent from the event bus configuration.
+* Note that from a configuration point of view, caching and persistence are independent of the event bus configuration.
 ====
 
 Note that for each global environment variable, a service-based one might be available additionally. For precedences see xref:deployment/services/env-var-note.adoc[Environment Variable Notes]. Check the configuration section below. 
