--- a/modules/ROOT/pages/deployment/services/s-list/store.adoc
+++ b/modules/ROOT/pages/deployment/services/s-list/store.adoc
@@ -8,6 +8,9 @@
 
 {description}
 
+NOTE: The store service is marked for deprecation and will be removed in a later version. Its tasks will be taken over by other services.
+
+
 // fixme: source description is still missing, and a better description is needed
 
 == Default Values
